--- a/MSFS 2020 API Host/MSFS 2020 API Host.csproj
+++ b/MSFS 2020 API Host/MSFS 2020 API Host.csproj
@@ -25,7 +25,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <OutputPath>W:\Projects\MSFS2020 Dev\MSFS 2020 API Host\Run\</OutputPath>
+    <OutputPath></OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
