--- a/Run/MSFS 2020 API Host App/MSFS2020APIHOST.exe.config
+++ b/Run/MSFS 2020 API Host App/MSFS2020APIHOST.exe.config
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <runtime>
+    <loadFromRemoteSources enabled="true" />
     <gcServer enabled="true" />
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
